vlib/v/scanner/tests/invalid_unicode_32_err.out
vlib/v/scanner/tests/invalid_unicode_err.vv:1:13: error: invalid unicode point `\uD8FF`
    1 | a := '\U0000D8FF'
      |                 ^
    2 | println(a)
